--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Mi Pagina Web</title>
+<title>Mi Pagina Web</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
 	@font-face {
       font-family: 'px';
